Melhorei a semântica do HTML

--- a/cafes.html
+++ b/cafes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Cafés com opções vegetarianas</h1>
@@ -38,101 +40,117 @@
                 <li><a href="canais.html">Canais YouTube</a></li>
         </menu>
     </header>
-    
+
     <main>
         <p>Algumas sugestões de cafeterias com opções vegetarianas.</p>
-        <div class="lojas">
+        <section class="lojas">
             <h3>Pâine</h3>
-            <p>Na loja da Varjota tem um ótimo cardápio com opções  veganas salgadas e há a opção de substituição do leite das bebidas por leite vegetal. Tudo muito bom!</p>
+            <p>Na loja da Varjota tem um ótimo cardápio com opções veganas salgadas e há a opção de substituição do
+                leite das bebidas por leite vegetal. Tudo muito bom!</p>
             <p>Rua Castro Monte, 899, Varjota - Fortaleza.</p>
-            <p>Clique <a href="https://instagram.com/paineartesanal?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/paineartesanal?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Nüsse Café</h3>
-            <p>Cappuccinos e outros drinks quentes ou gelados, com leite vegetal. Também tem opções de pratos salgados sem ingredientes de origem animal.</p>
+            <p>Cappuccinos e outros drinks quentes ou gelados, com leite vegetal. Também tem opções de pratos salgados
+                sem ingredientes de origem animal.</p>
             <p>Endereço: Shopping Iguatemi e Shopping Aldeota Open Mall.</p>
-            <p>Clique <a href="https://instagram.com/nusse.cafe?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/nusse.cafe?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Tipo Café</h3>
             <p>Opções de comidinhas veganas.</p>
             <p>Endereço: Rua Rua José Vilar, 3040 - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/tipo.cafe?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/tipo.cafe?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Café Cultive</h3>
             <p>Boa carta de chás.</p>
             <p>Endereço: Rua Maria Tomásia, 1276 - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/cafecultive?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/cafecultive?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Dorear Cacau</h3>
             <p>Opções de salgados, doces e bebidas.</p>
             <p>Endereço: Shopping RioMar e Shopping Reserva.</p>
-            <p>Clique <a href="https://instagram.com/dorearcacau?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/dorearcacau?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Mundo Zero</h3>
             <p>Bolos, doces, chocolates e biscoitos.</p>
             <p>Endereço: Shopping RioMar Papicu.</p>
-            <p>Clique <a href="https://instagram.com/seumundozero?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/seumundozero?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>B.lem Padaria</h3>
             <p>Pastelzinho de nata vegano. Muito bom acompanhado de um café!</p>
             <p>Endereço: Shopping Iguatemi e Shopping RioMar Papicu.</p>
-            <p>Clique <a href="https://instagram.com/blempadaria.iguatemifortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/blempadaria.iguatemifortaleza?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Go Coffee</h3>
             <p>Opção de substituição do leite animal por leite vegetal.</p>
-            <p>Clique <a href="https://www.instagram.com/gocoffeebrasil?igsh=eXVvcGV0OTl5dnlm" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/gocoffeebrasil?igsh=eXVvcGV0OTl5dnlm" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Torra</h3>
             <p>Cappuccino, chás variados e uma opção de bruschetta.</p>
             <p>Endereço: Rua Marcos Macêdo, 827 - Fortaleza</p>
-            <p>Clique <a href="https://www.instagram.com/amotorracafe?igsh=OTQxc3pwdzRwcWpi" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/amotorracafe?igsh=OTQxc3pwdzRwcWpi" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Dengo</h3>
             <p>Chocolate quente, cappuccino e chocolate em barra.</p>
             <p>Endereço: Shopping Iguatemi.</p>
-            <p>Clique <a href="https://www.instagram.com/dengochocolates?igsh=MWlmazd5Z3ljNm83Mw==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/dengochocolates?igsh=MWlmazd5Z3ljNm83Mw=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Keopi</h3>
             <p>Algumas opções de lanche vegano e opção de leite vegetal.</p>
             <p>Endereço: Avenida Deputado Oswaldo Studart, 370 - Bairro de Fátima.</p>
-            <p>Clique <a href="https://www.instagram.com/_keopi_cafeteria?igsh=ZmlmdHk3dDh5aGc5" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/_keopi_cafeteria?igsh=ZmlmdHk3dDh5aGc5"
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Tea Shop</h3>
             <p>Cappuccino e grande variedade de chás.</p>
             <p>Endereço: Shopping RioMar - Fortaleza</p>
-            <p>Clique <a href="https://www.instagram.com/teashop_riomarfortaleza?igsh=Ym5hYTFvcmxneThs" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/teashop_riomarfortaleza?igsh=Ym5hYTFvcmxneThs"
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Jardins Gourmet</h3>
             <p>Cappuccino e outros drinks de café. Algumas opções de comidas doces e salgadas.</p>
             <p>Endereço: Rua Jaime Calado, 130 - Bairro de Fátima - Fortaleza</p>
-            <p>Clique <a href="https://www.instagram.com/jardins_gourmet?igsh=MTAzbWcwZGUzeHlkaQ==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/jardins_gourmet?igsh=MTAzbWcwZGUzeHlkaQ=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Atelier 1913</h3>
             <p>Opção de substituição do leite animal por leite vegetal.</p>
             <p>Endereço: Rua Antônio Augusto, 744 - Fortaleza</p>
-            <p>Clique <a href="https://www.instagram.com/atelier1913?igsh=NjR5NnhkZmhjZDV3" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
+            <p>Clique <a href="https://www.instagram.com/atelier1913?igsh=NjR5NnhkZmhjZDV3" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
     </main>
-    
+
     <script>
         function clickMenu() {
-                if (menu.style.display == 'block') {
-                    menu.style.display = 'none'
-                } else {
-                    menu.style.display = 'block'
-                }
+            if (menu.style.display == 'block') {
+                menu.style.display = 'none'
+            } else {
+                menu.style.display = 'block'
+            }
         }
     </script>
 
@@ -140,4 +158,5 @@
         <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
     </footer>
 </body>
+
 </html>
