--- a/confeitarias.html
+++ b/confeitarias.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Confeitarias Vegetarianas</h1>
@@ -39,68 +41,79 @@
             </ul>
         </menu>
     </header>
-    
+
     <main>
         <p>Sessão destinada a indicar confeitarias que não utilizam produtos de origem animal.</p>
-        <div class="lojas">
+        <section class="lojas">
             <h3>Borges Baker</h3>
             <p>Bolos e doces! Trabalham apenas sob encomenda.</p>
             <p>Endereço: Rua João Regino, 38 - Parque Manibura</p>
-            <p>Clique <a href="https://instagram.com/borgesbaker?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/borgesbaker?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Sabor Alternativo</h3>
             <p>Diversos sabores de tortas e bolos.</p>
-            <p>Quinzenalmente na <a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==" target="_blank"> Feira Agroecológica do Benfica</a> </p>
-            <p>Clique <a href="https://instagram.com/sabor_alt?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Quinzenalmente na <a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA=="
+                    target="_blank"> Feira Agroecológica do Benfica</a> </p>
+            <p>Clique <a href="https://instagram.com/sabor_alt?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Jambalera</h3>
             <p>Confeitaria inclusiva à base de plantas. Opções sem glúten.</p>
             <p>Sob encomenda.</p>
-            <p>Clique <a href="https://instagram.com/jambalera?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/jambalera?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Veganale</h3>
             <p>Bolos confeitados, docinhos e salgadinhos. Opções sem glúten.</p>
             <p>Sob encomenda. Fica localizada em Maracanaú - CE</p>
-            <p>Clique <a href="https://instagram.com/vegan.ale?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/vegan.ale?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Florescer</h3>
             <p>Pedidos sob encomenda.</p>
-            <p>Clique <a href="https://www.instagram.com/florescer.confeitaria?igsh=MXJpMGxrNWt0cmFhZw==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/florescer.confeitaria?igsh=MXJpMGxrNWt0cmFhZw=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Madeleine Confeitaria</h3>
-            <p>Clique <a href="https://instagram.com/madeleineconfeitaria?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/madeleineconfeitaria?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Do Futuro Confeitaria</h3>
             <p>Pedidos sob encomenda.</p>
-            <p>Clique <a href="https://instagram.com/dofuturoconfeitaria?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/dofuturoconfeitaria?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Marjorie Serra</h3>
-            <p>Clique <a href="https://www.instagram.com/marjorielserra?igsh=cHlrbzdpZ3B3ODFq" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/marjorielserra?igsh=cHlrbzdpZ3B3ODFq" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Opa! Doces Veganos</h3>
-            <p>Clique <a href="https://www.instagram.com/opadocesveganos?igsh=MWJmMnUxNGt6a2J6Yg==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/opadocesveganos?igsh=MWJmMnUxNGt6a2J6Yg=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Meraki</h3>
-            <p>Clique <a href="https://www.instagram.com/sigameraki?igsh=MXI0YjY4NG9qZGJ2Yw==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
+            <p>Clique <a href="https://www.instagram.com/sigameraki?igsh=MXI0YjY4NG9qZGJ2Yw==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
     </main>
-    
+
     <script>
         function clickMenu() {
-                if (menu.style.display == 'block') {
-                    menu.style.display = 'none'
-                } else {
-                    menu.style.display = 'block'
-                }
+            if (menu.style.display == 'block') {
+                menu.style.display = 'none'
+            } else {
+                menu.style.display = 'block'
+            }
         }
     </script>
 
@@ -108,4 +121,5 @@
         <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
     </footer>
 </body>
+
 </html>
