--- a/cosmeticos.html
+++ b/cosmeticos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Cosméticos Veganos em Fortaleza</h1>
@@ -39,85 +41,100 @@
             </ul>
         </menu>
     </header>
-    
+
     <main>
-        <p>Como já falei anteriormente, veganismo não é dieta, mas um estilo de vida voltado para minimizar a exploração animal.</p>
-        <p>Então é importante, além de manter uma dieta vegetariana, usar produtos e cosméticos veganos, ou seja, sem ingredientes de origem animal, não testados em animais e de empresas que não testam em animais.</p>
+        <p>Como já falei anteriormente, veganismo não é dieta, mas um estilo de vida voltado para minimizar a exploração
+            animal.</p>
+        <p>Então é importante, além de manter uma dieta vegetariana, usar produtos e cosméticos veganos, ou seja, sem
+            ingredientes de origem animal, não testados em animais e de empresas que não testam em animais.</p>
         <p>Deixo abaixo algumas dicas de onde comprar cosméticos e produtos de limpeza veganos em Fortaleza.</p>
         <br>
         <h1 class="titulos-categorias">Cosméticos</h1>
-        <div class="lojas">
+        <section class="lojas">
             <h3>Cativa Natureza</h3>
             <p>Loja de cosméticos naturais, orgânicos e veganos.</p>
             <p>Endereço: Rua Barbosa de Freitas, 1040, loja 10 - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/cativanaturezafortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/cativanaturezafortaleza?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Flora Bamboo</h3>
             <p>Cosméticos orgânicos, veganos e naturais.</p>
             <p>Endereço: Rua Cláudio Manuel Dias Leite, 66 - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/florabamboo?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/florabamboo?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Brio Veg</h3>
             <p>Cosméticos artesanais, veganos e naturais.</p>
-            <p>Clique <a href="https://instagram.com/brio.veg?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/brio.veg?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Zero Waste</h3>
             <p>Endereço: Av. 13 de Maio, 2344.</p>
-            <p>Clique <a href="https://instagram.com/zerowastece?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/zerowastece?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Simple Organic</h3>
             <p>Shopping RioMar</p>
-            <p>Clique <a href="https://www.instagram.com/fortalezasimpleorganic?igsh=MTEyeDZ1emRnZjRvYg==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/fortalezasimpleorganic?igsh=MTEyeDZ1emRnZjRvYg=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Aroma de Nuvem</h3>
-            <p>Clique <a href="https://instagram.com/aromadenuvem?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/aromadenuvem?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Resilienza</h3>
-            <p>Clique <a href="https://instagram.com/resilienzacosmeticosnaturais?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/resilienzacosmeticosnaturais?igshid=YTQwZjQ0NmI0OA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Meu Eco</h3>
-            <p>Clique <a href="https://instagram.com/meu.eco_?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/meu.eco_?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Folha de Arruda</h3>
-            <p>Clique <a href="https://www.instagram.com/folhadearruda?igsh=MW83a3Zqd3Rlbm91eg==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/folhadearruda?igsh=MW83a3Zqd3Rlbm91eg=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Calêndula</h3>
-            <p>Clique <a href="https://instagram.com/calendula_cosmeticos_naturais?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/calendula_cosmeticos_naturais?igshid=YTQwZjQ0NmI0OA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Produtos Naturalis</h3>
-            <p>Clique <a href="https://www.instagram.com/produtos.naturalis?igsh=b2k0MzY3eWNtc2Jk" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
+            <p>Clique <a href="https://www.instagram.com/produtos.naturalis?igsh=b2k0MzY3eWNtc2Jk"
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
         <br>
         <h1 class="titulos-categorias">Salões de Beleza</h1>
-        <div class="lojas">
+        <section class="lojas">
             <h3>Renata Andrade Beauty</h3>
-            <p>Clique <a href="https://www.instagram.com/randradebeauty?igsh=MWs3b2E0cWd6NTM1Mg==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
+            <p>Clique <a href="https://www.instagram.com/randradebeauty?igsh=MWs3b2E0cWd6NTM1Mg=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
         <br>
         <h1 class="titulos-categorias">Produtos de Limpeza</h1>
-        <div class="lojas">
+        <section class="lojas">
             <h3>HK Eco</h3>
-            <p>Clique <a href="https://instagram.com/hkeco.br?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
+            <p>Clique <a href="https://instagram.com/hkeco.br?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
     </main>
-    
+
     <script>
         function clickMenu() {
-                if (menu.style.display == 'block') {
-                    menu.style.display = 'none'
-                } else {
-                    menu.style.display = 'block'
-                }
+            if (menu.style.display == 'block') {
+                menu.style.display = 'none'
+            } else {
+                menu.style.display = 'block'
+            }
         }
     </script>
 
@@ -125,4 +142,5 @@
         <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
     </footer>
 </body>
+
 </html>
