--- a/emporios.html
+++ b/emporios.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Empórios Vegetarianos</h1>
@@ -39,50 +41,57 @@
             </ul>
         </menu>
     </header>
-    
+
     <main>
-        <p>Sessão destinada para divulgação de empórios especializados em embutidos e produtos industrializados veganos.</p>
-        <div class="lojas">
+        <p>Sessão destinada para divulgação de empórios especializados em embutidos e produtos industrializados veganos.
+        </p>
+        <section class="lojas">
             <h3>The Veggies On The Table</h3>
             <p>Empório especializado em proteínas e "carnes" vegetarianas.</p>
             <p>Endereço: Av. Viena Weyne, 981 B - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/theveggiesonthetable?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/theveggiesonthetable?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Phas</h3>
             <p>Loja de produtos naturais de Fortaleza.</p>
             <p>Endereço: Rua João Ramalho, 404 - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/phasprodutosnaturais?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/phasprodutosnaturais?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Soul Veg</h3>
             <p>Quiosque com produtos veganos no shopping RioMar.</p>
             <p>Endereço: Shopping RioMar - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/amosoulveg?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/amosoulveg?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Lila</h3>
             <p>Antepastos e geleias.</p>
             <p>Endereço: Shopping RioMar - Fortaleza</p>
-            <p>Clique <a href="https://www.instagram.com/lila.natural?igsh=MXczY3FhdzJxY2F1ZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/lila.natural?igsh=MXczY3FhdzJxY2F1ZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Holos Poder de Nutrir</h3>
-            <p>Clique <a href="https://www.instagram.com/holospoderdenutrir?igsh=emVvaHp1OGxiMGtt" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/holospoderdenutrir?igsh=emVvaHp1OGxiMGtt"
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Veg Inclui</h3>
-            <p>Clique <a href="https://www.instagram.com/veginclui?igsh=MWJ5OGdoaHoxMjZsbQ==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
+            <p>Clique <a href="https://www.instagram.com/veginclui?igsh=MWJ5OGdoaHoxMjZsbQ==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
     </main>
-    
+
     <script>
         function clickMenu() {
-                if (menu.style.display == 'block') {
-                    menu.style.display = 'none'
-                } else {
-                    menu.style.display = 'block'
-                }
+            if (menu.style.display == 'block') {
+                menu.style.display = 'none'
+            } else {
+                menu.style.display = 'block'
+            }
         }
     </script>
 
@@ -90,4 +99,5 @@
         <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
     </footer>
 </body>
+
 </html>
