--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +15,7 @@
 </head>
 
 <body onresize="mudouTamanho">
-    
+
     <header>
         <div class="header-container">
             <div class="image-container"><img src="./imagens/logopng2.png" alt="Logo do site"></div>
@@ -42,20 +43,31 @@
             </ul>
         </menu>
     </header>
-    
+
     <main>
-        <section>
+        <section class="diferencas">
             <h2>Diferença entre veganismo e vegetarianismo</h2>
-            <p>O veganismo não é uma dieta, é uma filosofia de vida comprometida com a causa do bem-estar animal. Por consequência, não faz sentido o vegano se alimentar de produtos derivados da exploração e do abate de animais.</p>
+            <p>O veganismo não é uma dieta, é uma filosofia de vida comprometida com a causa do bem-estar animal. Por
+                consequência, não faz sentido o vegano se alimentar de produtos derivados da exploração e do abate de
+                animais.</p>
             <p>Já o vegetarianismo é uma dieta alimentar a base de plantas, sem ingredientes de origem animal.</p>
-            <p>Existem as variações do vegetarianismo, onde são inclusos alguns alimentos de origem animal, por exemplo, os lactovegetarianos consomem laticínios e os ovolactovegetarianos consomem ovos e derivados de leite.</p> 
-            <p>O Veganismo SEMPRE é pelos animais! Então, se você segue uma dieta vegetariana estrita, mas o seu motivo é apenas ter  uma saúde melhor, você não é vegano, mas sim vegetariano. 
+            <p>Existem as variações do vegetarianismo, onde são inclusos alguns alimentos de origem animal, por exemplo,
+                os lactovegetarianos consomem laticínios e os ovolactovegetarianos consomem ovos e derivados de leite.
             </p>
-            <p>Sendo assim, pela lógica, um hambúrguer 100% vegetal fabricado por empresas que tem como lucro principal o abate de animais não pode ser considerado um alimento vegano, entendem? É um alimento vegetariano.
+            <p>O Veganismo SEMPRE é pelos animais! Então, se você segue uma dieta vegetariana estrita, mas o seu motivo
+                é apenas ter uma saúde melhor, você não é vegano, mas sim vegetariano.
             </p>
-            <p>Claro que radicalismo e extremismo nunca é legal e às vezes, por praticidade ou outro motivo, iremos precisar usar um ou outro produto fabricado por empresas que exploram animais.
-            Mas devemos tentar ao máximo consumir os produtos dos empreendedores veganos, que são mais naturais, saudáveis, saborosos e muitas vezes até mais baratos. Assim contribuímos com a proposta vegana e nos mantemos coerentes.</p>
-            <p>Aqui, vou indicar estabelecimentos veganos e lugares que têm opções inclusivas no cardápio. Meu objetivo é fortalecer o veganismo e ajudar os vegetarianos a saber onde encontrar opções de comidas gostosas na cidade de Fortaleza.</p><br>
+            <p>Sendo assim, pela lógica, um hambúrguer 100% vegetal fabricado por empresas que tem como lucro principal
+                o abate de animais não pode ser considerado um alimento vegano, entendem? É um alimento vegetariano.
+            </p>
+            <p>Claro que radicalismo e extremismo nunca é legal e às vezes, por praticidade ou outro motivo, iremos
+                precisar usar um ou outro produto fabricado por empresas que exploram animais.
+                Mas devemos tentar ao máximo consumir os produtos dos empreendedores veganos, que são mais naturais,
+                saudáveis, saborosos e muitas vezes até mais baratos. Assim contribuímos com a proposta vegana e nos
+                mantemos coerentes.</p>
+            <p>Aqui, vou indicar estabelecimentos veganos e lugares que têm opções inclusivas no cardápio. Meu objetivo
+                é fortalecer o veganismo e ajudar os vegetarianos a saber onde encontrar opções de comidas gostosas na
+                cidade de Fortaleza.</p><br>
             <p style="text-align: center;">Se alimente conscientemente!</p>
         </section>
     </main>
@@ -70,11 +82,11 @@
         }*/
 
         function clickMenu() {
-                if (menu.style.display == 'block') {
-                    menu.style.display = 'none'
-                } else {
-                    menu.style.display = 'block'
-                }
+            if (menu.style.display == 'block') {
+                menu.style.display = 'none'
+            } else {
+                menu.style.display = 'block'
+            }
         }
     </script>
 
@@ -85,4 +97,5 @@
         <p>Última atualização: Junho/2024.</p>
     </footer>
 </body>
+
 </html>
