--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Lanchonetes vegetarianas</h1>
@@ -39,88 +41,103 @@
             </ul>
         </menu>
     </header>
-    
+
     <main>
         <p>Lanches vegetarianos!</p>
-        <div class="lojas">
+        <section class="lojas">
             <h3>Karlota Delícias Artesanais</h3>
             <p>Focaccias, doces e salgados.</p>
-            <p>Clique <a href="https://instagram.com/karlotadeliciasartesanais?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/karlotadeliciasartesanais?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Bike Vegan</h3>
             <p>Lanches diversos.</p>
             <p>Somente delivery.</p>
-            <p>Clique <a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>XBloom</h3>
             <p>Endereço: Shopping Iguatemi</p>
-            <p>Clique <a href="https://www.instagram.com/bloomfastgood?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-            <p>Clique <a href="https://www.instagram.com/xbloom_iguatemibosque?igsh=bjR0dzljYzQycHMy" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/bloomfastgood?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+            <p>Clique <a href="https://www.instagram.com/xbloom_iguatemibosque?igsh=bjR0dzljYzQycHMy"
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Cozinha da Luz</h3>
             <p>Vegburgers congelados.</p>
-            <p>Clique <a href="https://instagram.com/cozinhadaluz?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/cozinhadaluz?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Vovó Ginger</h3>
             <p>Delícias veganas sob encomenda.</p>
-            <p>Clique <a href="https://instagram.com/vovoginger?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/vovoginger?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Ri Veg</h3>
             <p>Espadinhas veganas e sem glúten.</p>
-            <p>Clique <a href="https://instagram.com/riveggie?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/riveggie?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>GoVegan</h3>
             <p>Delivery.</p>
-            <p>Clique <a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Laje Head</h3>
             <p>Endereço: Rua Paulino Nogueira, 82 - Benfica.</p>
-            <p>Clique <a href="https://instagram.com/lajehead?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/lajehead?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Gostosuras Veg</h3>
             <p>Sob encomenda.</p>
             <p>Endereço: Rua Professor Francisco Gonçalves, 1311 - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/gostosuras_veg?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/gostosuras_veg?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>VegGostosuras</h3>
-            <p>Clique <a href="https://www.instagram.com/veggostosuras?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/veggostosuras?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Platino Alquimia</h3>
             <p>Tempês e Homus.</p>
-            <p>Clique <a href="https://www.instagram.com/platinoalquimia?igsh=bGxlNXNzaHQ0OTNx" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/platinoalquimia?igsh=bGxlNXNzaHQ0OTNx" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Yog'n'Bake</h3>
-            <p>Clique <a href="https://www.instagram.com/yognbake?igsh=MWV2OTNleXJ0M2o1Yg==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/yognbake?igsh=MWV2OTNleXJ0M2o1Yg==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Las Crias</h3>
-            <p>Clique <a href="https://www.instagram.com/las_crias_vegan?igsh=eXB0dTF2eDZhamNp" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/las_crias_vegan?igsh=eXB0dTF2eDZhamNp" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Liva</h3>
             <p>Endereço: Rua João Carvalho, 775 - Fortaleza</p>
-            <p>Clique <a href="https://www.instagram.com/livavidavegana?igsh=dTZqNTYxaTJ3MjFx" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
+            <p>Clique <a href="https://www.instagram.com/livavidavegana?igsh=dTZqNTYxaTJ3MjFx" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
     </main>
-    
+
     <script>
         function clickMenu() {
-                if (menu.style.display == 'block') {
-                    menu.style.display = 'none'
-                } else {
-                    menu.style.display = 'block'
-                }
+            if (menu.style.display == 'block') {
+                menu.style.display = 'none'
+            } else {
+                menu.style.display = 'block'
+            }
         }
     </script>
 
@@ -128,4 +145,5 @@
         <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
     </footer>
 </body>
+
 </html>
