--- a/queijos.html
+++ b/queijos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Queijos Veganos em Fortaleza</h1>
@@ -39,29 +41,31 @@
             </ul>
         </menu>
     </header>
-    
+
     <main>
         <p>Queijarias veganas artesanais.</p>
-        <div class="lojas">
+        <section class="lojas">
             <h3>B.E.N.</h3>
             <p>Queijos veganos curados.</p>
             <p>Delivery</p>
-            <p>Clique <a href="https://instagram.com/b.e.n.queijosveganos?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/b.e.n.queijosveganos?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Eva Verde</h3>
             <p>Tofu.</p>
-            <p>Clique <a href="https://www.instagram.com/evaverdefor?igsh=MTZkbzZiazVzemlkNg==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
+            <p>Clique <a href="https://www.instagram.com/evaverdefor?igsh=MTZkbzZiazVzemlkNg==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
     </main>
-    
+
     <script>
         function clickMenu() {
-                if (menu.style.display == 'block') {
-                    menu.style.display = 'none'
-                } else {
-                    menu.style.display = 'block'
-                }
+            if (menu.style.display == 'block') {
+                menu.style.display = 'none'
+            } else {
+                menu.style.display = 'block'
+            }
         }
     </script>
 
@@ -69,4 +73,5 @@
         <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
     </footer>
 </body>
+
 </html>
