--- a/restaurantes.html
+++ b/restaurantes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Restaurantes Vegetarianos</h1>
@@ -39,102 +41,119 @@
             </ul>
         </menu>
     </header>
-    
+
     <main>
         <p>Esta sessão é dedicada para divulgar os restaurantes e marmitarias vegetarianos de Fortaleza.</p>
-        <div class="lojas">
+        <section class="lojas">
             <h3>Rango Verde</h3>
             <p>Almoço e lanches.</p>
             <p>Endereço: Rua João Gentil, 207, Benfica - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/rangoverdeveg?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/rangoverdeveg?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Pimenta Vegana</h3>
             <p>Almoço e lanches.</p>
             <p>Endereço: Rua Confúcio Pamplona, 339, Benfica - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Annapurna</h3>
             <p>Almoço.</p>
             <p>Endereço: Rua Paracuru, 34 - Centro</p>
-            <p>Clique <a href="https://instagram.com/annapurnairacema?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/annapurnairacema?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Mandir</h3>
             <p>Almoço.</p>
             <p>Endereço: Rua Padre Francisco Pinto, 257, Benfica - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/mandir.amor?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/mandir.amor?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Govinda</h3>
             <p>Almoço delivery.</p>
-            <p>Clique <a href="https://instagram.com/govindavegan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-            <p>Clique <a href="https://instagram.com/govindagilberto?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o outro perfil.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/govindavegan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+            <p>Clique <a href="https://instagram.com/govindagilberto?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o outro perfil.</p>
+        </section>
+        <section class="lojas">
             <h3>Terrana</h3>
             <p>Almoço delivery.</p>
-            <p>Clique <a href="https://instagram.com/terrana.vegano?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/terrana.vegano?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Buendia</h3>
             <p>Almoço delivery.</p>
-            <p>Clique <a href="https://instagram.com/buendiacomidavegana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/buendiacomidavegana?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Malaguetta</h3>
             <p>Almoço.</p>
             <p>Endereço: Rua Instituto do Ceará, 140, Benfica - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/malaguetta_restaurante_vegano?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/malaguetta_restaurante_vegano?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Quintal de Comida</h3>
             <p>Endereço: Rua Miguel Gonçalves, 195, Montese - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/quintaldecomida?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/quintaldecomida?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Pachamama Cultural</h3>
-            <p>Clique <a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Cozinha Alternativa</h3>
             <p>Refeições sob encomenda.</p>
-            <p>Clique <a href="https://instagram.com/amocozinhaalternativa?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/amocozinhaalternativa?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Broto de Beterraba</h3>
             <p>Kits semanais de refeições vegetarianas.</p>
-            <p>Clique <a href="https://instagram.com/brotodebeterraba?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/brotodebeterraba?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>The Veggie</h3>
             <p>Almoço delivery.</p>
-            <p>Clique <a href="https://instagram.com/theveggiefor?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/theveggiefor?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Agni Cozinha Vegetariana</h3>
             <p>Refeições congeladas.</p>
             <p>Endereço: Rua Hermano Vasconcelos, 327 - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/agnicozinhavegetariana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/agnicozinhavegetariana?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Rango Popular</h3>
-            <p>Clique <a href="https://www.instagram.com/rangopopular?igsh=NWx3dmo1OXB5dGM1" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://www.instagram.com/rangopopular?igsh=NWx3dmo1OXB5dGM1" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Deliveggie</h3>
-            <p>Clique <a href="https://www.instagram.com/deliveggie_ce?igsh=MWFrd3FpZ2l0MjdwaA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
+            <p>Clique <a href="https://www.instagram.com/deliveggie_ce?igsh=MWFrd3FpZ2l0MjdwaA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
     </main>
-    
+
     <script>
         function clickMenu() {
-                if (menu.style.display == 'block') {
-                    menu.style.display = 'none'
-                } else {
-                    menu.style.display = 'block'
-                }
+            if (menu.style.display == 'block') {
+                menu.style.display = 'none'
+            } else {
+                menu.style.display = 'block'
+            }
         }
     </script>
 
@@ -142,4 +161,5 @@
         <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
     </footer>
 </body>
+
 </html>
