--- a/sorvetes.html
+++ b/sorvetes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Sorveterias</h1>
@@ -39,36 +41,41 @@
             </ul>
         </menu>
     </header>
-    
+
     <main>
-        <p>Nessa sessão vou indicar as sorveterias veganas da cidade e também sorveterias com boas opções veganas de sorvete.</p>
-        <div class="lojas">
+        <p>Nessa sessão vou indicar as sorveterias veganas da cidade e também sorveterias com boas opções veganas de
+            sorvete.</p>
+        <section class="lojas">
             <h3>Sorvete da Reserva</h3>
             <p>Sorveteria 100% vegana! Também tem brownie e cookie!</p>
             <p>Endereço: Rua Torres Câmara, 100 - Aldeota</p>
-            <p>Clique <a href="https://instagram.com/sorvetedareserva?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/sorvetedareserva?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Bellucci</h3>
-            <p>Clique <a href="https://instagram.com/belluccigelateria?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/belluccigelateria?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Bacio di Latte</h3>
-            <p>Clique <a href="https://instagram.com/baciodilatte?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/baciodilatte?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Yozenn</h3>
-            <p>Clique <a href="https://www.instagram.com/yozenn?igsh=dzZxbDkzZTZwdWU3" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
+            <p>Clique <a href="https://www.instagram.com/yozenn?igsh=dzZxbDkzZTZwdWU3" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
     </main>
-    
+
     <script>
         function clickMenu() {
-                if (menu.style.display == 'block') {
-                    menu.style.display = 'none'
-                } else {
-                    menu.style.display = 'block'
-                }
+            if (menu.style.display == 'block') {
+                menu.style.display = 'none'
+            } else {
+                menu.style.display = 'block'
+            }
         }
     </script>
 
@@ -76,4 +83,5 @@
         <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
     </footer>
 </body>
+
 </html>
