--- a/festas.html
+++ b/festas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Encomendas para Festas</h1>
@@ -39,69 +41,78 @@
             </ul>
         </menu>
     </header>
-    
+
     <main>
         <p>Sessão destinada a indicar locais que fazem encomendas de saldadinhos, doces e bolos para festas.</p>
-        <div class="lojas">
+        <section class="lojas">
             <h3>Veg Livre</h3>
             <p>Salgadinhos, docinhos e bolos.</p>
-            <p>Clique <a href="https://instagram.com/veglivre?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/veglivre?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Pimenta Vegana</h3>
             <p>Salgadinhos e bolos sob encomenda.</p>
-            <p>Clique <a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Bike Vegan</h3>
             <p>Salgadinhos sob encomenda.</p>
             <p>Somente delivery.</p>
-            <p>Clique <a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Pachamama Cultural</h3>
             <p>Salgadinhos.</p>
             <p>Endereço: Rua Barão do Rio Branco, 2734 - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Borges Baker</h3>
             <p>Bolos confeitados e docinhos.</p>
             <p>Endereço: Rua João Regino, 38 - Parque Manibura</p>
-            <p>Clique <a href="https://instagram.com/borgesbaker?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/borgesbaker?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Vovó Ginger</h3>
             <p>Tortas, pãezinhos e patês, sob encomenda, para confraternizações.</p>
-            <p>Clique <a href="https://instagram.com/vovoginger?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/vovoginger?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Veganale</h3>
             <p>Bolos confeitados, docinhos e salgadinhos. Opções sem glúten.</p>
             <p>Sob encomenda. Fica localizada em Maracanaú - CE</p>
-            <p>Clique <a href="https://instagram.com/vegan.ale?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/vegan.ale?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>naVE GAN</h3>
             <p>Salgadinhos.</p>
-            <p>Clique <a href="https://instagram.com/na.nave_gan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
+            <p>Clique <a href="https://instagram.com/na.nave_gan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Gostosuras Veg</h3>
             <p>Sob encomenda.</p>
             <p>Endereço: Rua Professor Francisco Gonçalves, 1311 - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/gostosuras_veg?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
+            <p>Clique <a href="https://instagram.com/gostosuras_veg?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
 
     </main>
-    
+
     <script>
         function clickMenu() {
-                if (menu.style.display == 'block') {
-                    menu.style.display = 'none'
-                } else {
-                    menu.style.display = 'block'
-                }
+            if (menu.style.display == 'block') {
+                menu.style.display = 'none'
+            } else {
+                menu.style.display = 'block'
+            }
         }
     </script>
 
@@ -109,4 +120,5 @@
         <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
     </footer>
 </body>
+
 </html>
